finish left side of screen added the logo add the background iamge positioned the logo with flexbox credited background-image

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
-  <title>Sign-Up Form</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Sign-up</title>
 </head>
 <body>
-  <h1>Head 1</h1>
-  <p>Placeholder paragraph</p>
-  <a href="#">Lorem ipsum dolor sit amet consectetur adipisicing.</a>
+  <div class="container">
+    <div class="left">
+      <div class="credits">
+        Photo by <a href="https://unsplash.com/@nasa?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" style="color:white" target="_blank" rel="noopener noreferrer">NASA</a> on <a href="https://unsplash.com/s/photos/rocket?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText" style="color: white;" target="_blank" rel="noopener noreferrer">Unsplash</a>
+      </div>
+      <div class="logo">
+        <img src="./images/odin-lined.png" alt="logo">
+        <h1>Odin: The journey starts here</h1>
+      </div>
+    </div>
+    
+  </div>
 </body>
 </html>
