--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <form action="#" method="post">
         <div class="form">
-          <p class="beginning-text">Blast Off!!</p>
+          <p class="beginning-text" style="margin-left: 30px;">Blast Off!!</p>
           <div class="inputs">
             <div class="input-section">
               <label for="fullName">Full Name</label>
