add netlify form posting

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Sign up <em>now</em> to get started</p>
         <p>You will miss out if you don't.</p>
       </div>
-      <form action="#" method="post">
+      <form action="#" method="post" data-netlify="true">
         <div class="form">
           <p class="beginning-text" style="margin-left: 30px;">Blast Off!!</p>
           <div class="inputs">
